# spotkit-python

./: .readthedocs.yaml  LICENSE  Pipfile  README.md  client.py  examples.py  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst
spotkit/: api.py
tests/: test_api.py
